crates/graphite/tests/ui/graph_splice_bad_type.stderr
error[E0271]: type mismatch resolving `<Vec<i32> as IntoIterator>::Item == (_, _)`
  --> tests/ui/graph_splice_bad_type.rs:23:11
   |
22 |       let _ = graphite::graph!(SpliceBad {
   |  _____________-
23 | |         ..not_pairs,
   | |           ^^^^^^^^^ expected `(_, _)`, found `i32`
24 | |     });
   | |______- required by a bound introduced by this call
   |
   = note: expected tuple `(_, _)`
               found type `i32`
note: required by a bound in `SpliceBadBuilder::extend`
  --> tests/ui/graph_splice_bad_type.rs:14:1
   |
14 | / graphite::graph_schema! {
15 | |     schema SpliceBad {
16 | |         node Person;
17 | |     }
18 | | }
   | |_^ required by this bound in `SpliceBadBuilder::extend`
   = note: this error originates in the macro `graphite::graph_schema` (in Nightly builds, run with -Z macro-backtrace for more info)
